# fun-with-text-mining

./: Dockerfile  README.md  dev.ipynb  docker-compose.yml  pyproject.toml
python/: .gitignore  README.md  aws_credential_env.py  deprecated_sagemaker_ai_credential.py  docker-compose.yml  pyproject.toml
python/setup/: linux.sh  mac.sh  windows.bat
setup/: linux.sh  mac.sh
