[project]
name = "your-project-name"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11" # update to your version
dependencies = [
    "attacut>=1.0.6",
    "boto3>=1.40.56",
    "gensim>=4.4.0",
    "numpy>=1.24.0,<2.0.0",
    "pyldavis>=3.4.1",
    "pythainlp>=5.1.2",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "seaborn>=0.13.2",
]
